--- a/client/src/components/Projects/ProjectCarousel/ProjectCarousel.css
+++ b/client/src/components/Projects/ProjectCarousel/ProjectCarousel.css
@@ -1,96 +1,96 @@
 .projectCarousel {
-    max-width: 100vw;
-    margin: 0 auto;
-    overflow: hidden;
-    margin-top: 2rem;
+	max-width: 100vw;
+	margin: 0 auto;
+	overflow: hidden;
+	margin-top: 2rem;
 }
 
 .projectCarousel__slidesWrapper {
-    margin: 0 auto;
-    width: 90vw;
-    min-height: 80vh;
-    position: relative;
-    display: flex;
+	margin: 0 auto;
+	width: 100%;
+	height: 600px;
+	position: relative;
+	display: flex;
 }
 
 .projectCarousel__slide {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-    transition: all 0.4s linear;
-    display: grid;
-    justify-content: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+	transition: all 0.4s linear;
+	display: grid;
+	justify-content: center;
 }
 
 .projectCarousel__slide.slide {
-    transition: all 0s linear;
-    transform: translateX(85%);
-    opacity: 0;
+	transition: all 0s linear;
+	transform: translateX(85%);
+	opacity: 0;
 }
 
 .projectCarousel__slide.activeSlide {
-    opacity: 1;
-    transform: translateX(0);
-    z-index: 2;
+	opacity: 1;
+	transform: translateX(0);
+	z-index: 2;
 }
 
 .projectCarousel__slide.lastSlide {
-    transform: translateX(-85%) scale3d(0.7, 0.7, 0.7);
-    opacity: 0;
+	transform: translateX(-85%) scale3d(0.7, 0.7, 0.7);
+	opacity: 0;
 }
 
 .projectCarousel__slide.nextSlide {
-    transform: translateX(85%) scale3d(0.7, 0.7, 0.7);
-    opacity: 0;
+	transform: translateX(85%) scale3d(0.7, 0.7, 0.7);
+	opacity: 0;
 }
 
 .projectCarousel__slidesWrapper button {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    background-color: transparent;
-    display: block;
-    width: 0;
-    height: 0;
-    border-top: 40px solid transparent;
-    border-bottom: 40px solid transparent;
-    transition: all 0.3s ease;
-    z-index: 4;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	background-color: transparent;
+	display: block;
+	width: 0;
+	height: 0;
+	border-top: 40px solid transparent;
+	border-bottom: 40px solid transparent;
+	transition: all 0.3s ease;
+	z-index: 4;
 }
 
 .projectCarousel__slidesWrapper button:focus {
-    outline: none;
+	outline: none;
 }
 
 .projectCarousel__slidesWrapper button:active {
-    border-color: var(--white) !important;
+	border-color: var(--white) !important;
 }
 
 .projectCarousel__slidesWrapper button:hover {
-    transform: scaleX(1.5);
+	transform: scaleX(1.5);
 }
 
 .projectCarousel__leftControl {
-    left: 0;
-    border-left: none;
-    border-right: 25px solid var(--white);
+	left: 0;
+	border-left: none;
+	border-right: 25px solid var(--white);
 }
 
 .projectCarousel__rightControl {
-    right: 0;
-    border-right: none;
-    border-left: 25px solid var(--dark);
+	right: 0;
+	border-right: none;
+	border-left: 25px solid var(--dark);
 }
 
 @media (max-width: 1100px) {
-    .projectCarousel__slidesWrapper {
-        min-height: 100vh;
-    }
+	.projectCarousel__slidesWrapper {
+		min-height: 100vh;
+	}
 
-    .projectCarousel__slidesWrapper button {
-        display: none;
-    }
+	.projectCarousel__slidesWrapper button {
+		display: none;
+	}
 }
